# twitter_sentiment_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 00_env_and_data_check.ipynb
src/twitter_sentiment/: __init__.py  config.py  utils.py
src/twitter_sentiment.egg-info/: PKG-INFO  SOURCES.txt
